# 10-days-of-grad

day3/: NN2.hs  extensible-neural.lhs
day4/: NN2.hs  README.md  backprop-mnist.lhs  batchnorm.cabal  batchnorm.hs  cuda-nn.cabal  package.yaml  run.sh  stack-8.6.yaml  stack.yaml
day4/app/: Main.hs
day4/src/: Model.hs  NeuralNetwork.hs
day5/: TODO  conv.cabal  package.yaml  stack.yaml
day5/app/: Main.hs
day5/bench/: Main.hs  conv2d-pytorch.py
day5/src/: NeuralNetwork.hs  Weights.hs
day6/: TODO  package.yaml  run.sh
day6/app/: Main.hs
day6/src/: NeuralNetwork.hs
rnn/: README.md  rnn.cabal  run.sh
rnn/app/: Main.hs
rnn/src/: NeuralNetwork.hs
