name:                   conv
version:                0.0.0
synopsis:               Convolutional neural networks
description:

author:                 Bogdan Penkovsky
maintainer:
category:               AI
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  exposed-modules:
    NeuralNetwork
    , Shuffle
    , Weights

  -- other-modules:

  build-depends:
        base                    >= 4.7 && < 4.13
      , massiv                  >= 0.4.2.0 && < 0.5
      , mwc-random
      , random
      , streamly
      , MonadRandom
      , array

  hs-source-dirs:
      src

executable conv
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts
  default-language:    Haskell2010
  build-depends:
        base                    >= 4.7  && < 4.13
      , bytestring
      , massiv
      , massiv-io
      , random
      , streamly
      , mnist-idx
      , vector
      , transformers
      , deepseq
      , split

      -- This library
      , conv
