name:                   rnn
version:                0.0.0
synopsis:               Recurrent neural networks
description:

author:                 Bogdan Penkovsky
maintainer:
category:               AI
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  exposed-modules:
    NeuralNetwork

  -- other-modules:

  build-depends:
        base                    >= 4.7 && < 4.13
      , massiv                  >= 0.3.2.1
      , mwc-random
      , random
      , streamly
      , MonadRandom
      -- , array

  hs-source-dirs:
      src

executable sine
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts
  default-language:    Haskell2010
  build-depends:
        base                    >= 4.7  && < 4.13
      -- , bytestring
      , massiv
      -- , random
      , streamly
      , rnn
      -- , vector
      -- , transformers
      -- , split
